# face-detection-MTCNN-ncnn

./: CMakeLists.txt  Mtcnn.cpp  Mtcnn.h  README.md  build_raspberry.sh  build_ubuntu.sh  build_vs2017_x64.bat  main.cpp
vs2017_sln/: Copy_Model.bat  mtcnn.sln  mtcnn.vcxproj  mtcnn.vcxproj.filters
wider_face/: Experiment.cpp  FileIterator.cpp  FileIterator.h  ParseResult.cpp  ParseResult.vcxproj  ParseResult.vcxproj.filters  WriteBoundingBox.filters  WriteBoundingBox.vcxproj  wider_face.sln
